# mjpg-streamer

mjpg-streamer-experimental/: run.sh
mjpg-streamer-experimental/plugins/input_http/: input_http.c
mjpg-streamer-experimental/plugins/input_opencv/: CMakeLists.txt  input_opencv.cpp  yolact_uint8.cpp  yolact_uint8.h
mjpg-streamer-experimental/plugins/input_opencv/filters/cvfilter_cpp/: CMakeLists.txt  filter_cpp.cpp
mjpg-streamer-experimental/plugins/input_opencv/filters/cvfilter_py/: CMakeLists.txt
mjpg-streamer-experimental/plugins/input_opencv/include/: common.h
